update signalR for use case Approve article

--- a/NewsPortalRazor/NewsPortalRazor.csproj
+++ b/NewsPortalRazor/NewsPortalRazor.csproj
@@ -28,6 +28,10 @@
     <Content Update="appsettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Update="Pages\Editor\Notifications.cshtml">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
